--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,8 @@
         <a href="/" style="padding: 9%">Log Out</a>
     </div>
     <h1>Home Page</h1>
-    <p style="text-align: center">{{ message }}
+<div style="justify-self: center; font-weight: bold; font-size: 2rem">{{ message }}</div>
+    <p style="text-align: center">
         <img src="/static/Logo.jpeg" alt="logo" style="width:auto; height:31.25rem"></img>
 </body>
 </html>
