--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -59,11 +59,11 @@
         <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
     </a>
 </div>
-    <div class="pfplogo2">
-    <a href="profile_page.html" >
+<div class="pfplogo2">
+    <a href="profile_page.html">
         <img src="/static/moo_deng_profilePic.png" alt="Profile Logo" style="height: 10vh; width: auto;">
     </a>
-    </div>
+</div>
 <div class="navbar">
     {#    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>#}
     <a href="profile_page.html" class="active" style="padding: 23vh">Edit Account</a>
@@ -73,7 +73,9 @@
     <a href="/" style="padding: 23vh">Log Out</a>
 </div>
 {% load custom_filters %}
-
+<div style="justify-self: center">
+    {{ message }}
+</div>
 <div class="modal-header" id="myModal {{ user.id }}">
     <h2 style="text-align: center; margin-bottom: 1rem;">Edit Account</h2>
     <form method="POST" action="{% url 'profile_page' %}">
