IM FINALLY FREE #3

--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -216,7 +216,7 @@
                                         <label class="checkbox-label">
                                             <input type="checkbox"
                                                    name="instructors"
-                                                   value="{{ instructor }}">
+                                                   value="{{ instructor.id }}">
                                             {{ instructor.first_name }} {{ instructor.last_name }}
                                         </label>
                                     {% endfor %}
