--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
         <a href="course_directory.html" style="padding: 9%">Course Directory</a>
         <a href="/" style="padding: 9%">Log Out</a>
     </div>
-    <h1>Home Page</h1>
+    <h1 style>Home Page</h1>
 <div style="justify-self: center; font-weight: bold; font-size: 2rem">{{ message }}</div>
     <p style="text-align: center">
         <img src="/static/Logo.jpeg" alt="logo" style="width:auto; height:31.25rem"></img>
